# wry

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPENDENTS.md  LICENSE  LICENSE.spdx  MOBILE.md  README.md  SECURITY.md  build.rs
.cargo/: config.toml
.changes/: config.json
.github/: dependabot.yml
.github/workflows/: Rust.yml  bench.yml
Source/: error.rs  lib.rs  proxy.rs  util.rs  web_context.rs
Source/android/: binding.rs  main_pipe.rs  mod.rs
Source/webkitgtk/: drag_drop.rs  mod.rs  synthetic_mouse_events.rs  web_context.rs
Source/webview2/: drag_drop.rs  mod.rs  util.rs
Source/wkwebview/: download.rs  drag_drop.rs  mod.rs  navigation.rs  proxy.rs  synthetic_mouse_events.rs  util.rs
Source/wkwebview/class/: document_title_changed_observer.rs  url_scheme_handler.rs  wry_download_delegate.rs  wry_navigation_delegate.rs  wry_web_view.rs  wry_web_view_delegate.rs  wry_web_view_parent.rs  wry_web_view_ui_delegate.rs
Source/wkwebview/ios/: WKWebView.rs
bench/: Cargo.toml
bench/Source/: build_benchmark_jsons.rs  run_benchmark.rs  utils.rs
examples/: async_custom_protocol.rs  custom_protocol.rs  custom_titlebar.rs  gtk_multiwebview.rs  multiwebview.rs  multiwindow.rs  reparent.rs  simple.rs  streaming.rs  transparent.rs  wgpu.rs  winit.rs
examples/custom_protocol/: script.js
src/: error.rs  proxy.rs
