workspace = {}

[dependencies]
cookie = { version = "0.18" }
dpi = { version = "0.1" }
http = "1.2"
once_cell = "1"
raw-window-handle = { version = "0.6", features = ["std"] }
thiserror = "2.0"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
getrandom = "0.3"
http-range = "0.1"
percent-encoding = "2.3"
pollster = "0.4.0"
tao = "0.31"
wgpu = "24"
winit = "0.30"

[features]
default = ["drag-drop", "objc-exception", "protocol", "os-webview"]
devtools = []
drag-drop = []
fullscreen = []
linux-body = ["webkit2gtk/v2_40", "os-webview"]
mac-proxy = []
objc-exception = ["objc2/catch-all"]
os-webview = [
	"javascriptcore-rs",
	"webkit2gtk",
	"webkit2gtk-sys",
	"dep:gtk",
	"soup3",
	"x11-dl",
	"gdkx11",
]
protocol = []
serde = ["dpi/serde"]
tracing = ["dep:tracing"]
transparent = []

[lints]

[lints.rust]

[lints.rust.unexpected_cfgs]
check-cfg = ["cfg(linux)", "cfg(gtk)"]
level = "warn"

[package]
authors = ["Tauri Programme within The Commons Conservancy"]
categories = ["gui"]
description = "Cross-platform WebView rendering library"
documentation = "https://docs.rs/wry"
edition = "2024"
exclude = ["/.changes", "/.github", "/audits", "/wry-logo.svg"]
license-file = "LICENSE"
name = "wry"
readme = "README.md"
repository = "https://github.com/tauri-apps/wry"
rust-version = "1.85.0"
version = "0.48.1"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
features = ["drag-drop", "protocol", "os-webview"]
no-default-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
targets = [
	"x86_64-unknown-linux-gnu",
	"x86_64-pc-windows-msvc",
	"x86_64-apple-darwin",
]

[target]

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))']

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
gdkx11 = { version = "0.18", optional = true }
gtk = { version = "0.18", optional = true }
javascriptcore-rs = { version = "1.1.2", features = ["v2_28"], optional = true }
percent-encoding = "2.3"
soup3 = { version = "0.7", optional = true }
webkit2gtk = { version = "2.0.1", features = ["v2_38"], optional = true }
webkit2gtk-sys = { version = "2.0.1", optional = true }
x11-dl = { version = "2.21", optional = true }

[target.'cfg(target_os = "android")']

[target.'cfg(target_os = "android")'.dependencies]
base64 = { version = "0.22" }
crossbeam-channel = "0.5"
html5ever = { version = "0.29" }
jni = { version = "0.21" }
kuchiki = { package = "kuchikiki", version = "0.8" }
libc = { version = "0.2" }
ndk = { version = "0.9" }
sha2 = { version = "0.10" }
tao-macros = "0.1"

[target.'cfg(target_os = "ios")']

[target.'cfg(target_os = "ios")'.dependencies]
objc2-ui-kit = { version = "0.3.0", default-features = false, features = [
  "std",
  "objc2-core-foundation",
  "UIResponder",
  "UIScrollView",
  "UIView",
  "UIWindow",
  "UIApplication",
  "UIEvent",
] }

[target.'cfg(target_os = "macos")']

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.0", default-features = false, features = [
  "std",
  "objc2-core-foundation",
  "NSApplication",
  "NSButton",
  "NSControl",
  "NSEvent",
  "NSWindow",
  "NSView",
  "NSPasteboard",
  "NSPanel",
  "NSResponder",
  "NSOpenPanel",
  "NSSavePanel",
  "NSMenu",
] }

[target.'cfg(target_os = "windows")']

[target.'cfg(target_os = "windows")'.dependencies]
dunce = "1"
webview2-com = "0.35"
windows-core = "0.59"
windows-version = "0.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_LibraryLoader",
  "Win32_System_Ole",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Globalization",
  "Win32_UI_HiDpi",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
]
version = "0.59"

[target.'cfg(target_vendor = "apple")']

[target.'cfg(target_vendor = "apple")'.dependencies]
block2 = "0.6"
objc2 = { version = "0.6", features = ["exception"] }
objc2-core-foundation = { version = "0.3.0", default-features = false, features = [
  "std",
  "CFCGTypes",
] }
objc2-foundation = { version = "0.3.0", default-features = false, features = [
  "std",
  "objc2-core-foundation",
  "NSURLRequest",
  "NSURL",
  "NSString",
  "NSKeyValueCoding",
  "NSStream",
  "NSDictionary",
  "NSObject",
  "NSData",
  "NSEnumerator",
  "NSKeyValueObserving",
  "NSThread",
  "NSJSONSerialization",
  "NSDate",
  "NSBundle",
  "NSProcessInfo",
  "NSValue",
  "NSRange",
  "NSRunLoop",
] }
objc2-web-kit = { version = "0.3.0", default-features = false, features = [
  "std",
  "objc2-core-foundation",
  "objc2-app-kit",
  "block2",
  "WKWebView",
  "WKWebViewConfiguration",
  "WKWebsiteDataStore",
  "WKDownload",
  "WKDownloadDelegate",
  "WKNavigation",
  "WKNavigationDelegate",
  "WKUserContentController",
  "WKURLSchemeHandler",
  "WKPreferences",
  "WKURLSchemeTask",
  "WKScriptMessageHandler",
  "WKUIDelegate",
  "WKOpenPanelParameters",
  "WKFrameInfo",
  "WKSecurityOrigin",
  "WKScriptMessage",
  "WKNavigationAction",
  "WKWebpagePreferences",
  "WKNavigationResponse",
  "WKUserScript",
  "WKHTTPCookieStore",
] }
url = "2.5"
