workspace = {}

[package]
name = "wry_bench"
version = "0.1.0"
authors = ["Tauri Programme within The Commons Conservancy"]
edition = "2018"
license-file = "LICENSE"
description = "Cross-platform WebView rendering library"
repository = "https://github.com/tauri-apps/wry"

[dependencies]
anyhow = { version = "1.0" }
time = { version = "0.3", features = ["formatting"] }
tempfile = { version = "3.16" }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "run_benchmark"
path = "src/run_benchmark.rs"

[[bin]]
name = "build_benchmark_jsons"
path = "src/build_benchmark_jsons.rs"
