workspace = {}

[[bin]]
name = "run_benchmark"
path = "src/run_benchmark.rs"

[[bin]]
name = "build_benchmark_jsons"
path = "src/build_benchmark_jsons.rs"

[dependencies]
anyhow = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tempfile = { version = "3.16" }
time = { version = "0.3", features = ["formatting"] }

[package]
authors = ["Tauri Programme within The Commons Conservancy"]
description = "Cross-platform WebView rendering library"
edition = "2018"
license-file = "LICENSE"
name = "wry_bench"
repository = "https://github.com/tauri-apps/wry"
version = "0.1.0"
